telegram button align fixed

--- a/src/NewComponents/Planet/Planet.css
+++ b/src/NewComponents/Planet/Planet.css
@@ -77,7 +77,7 @@
 
 @media screen and (max-width: 768px) {
   .earn-h2 {
-    font-size: 17px;
+    font-size: 23px !important;
   }
 
   .earn-icon {
